# python-rust-example

./: .gitignore  Makefile  Pipfile  README.md  main.py
awesomelib/: Cargo.toml
awesomelib/src/: lib.rs
